# QuickScrawl

./: .gitignore  Package.swift  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  deploy-website.yml
Sources/SimpleNote/: ContentView.swift  FormatToolbar.swift  PersistenceManager.swift  RichTextCoordinator.swift  RichTextEditor.swift  SimpleNoteApp.swift
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
website/: index.html  style.css
