[package]
name = "simplenote"
version = "1.0.0"
edition = "2021"

[lib]
name = "simplenote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "simplenote"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
